--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,16 +1,11 @@
-
-
-<span>{{ title }} Hola Mundo </span>
-
-
-
-
-
-
-
-
-
-
+<div class="wrapper">
+  <app-header></app-header>
+  <app-menu></app-menu>
+  <div class="container">  
+    <router-outlet></router-outlet>
+  </div>
+</div>
+<app-footer></app-footer>
 
 
 
