--- a/my-app/src/styles.css
+++ b/my-app/src/styles.css
@@ -1,1 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700&display=swap');
+
+
+* {
+    /*margin: 0;
+    padding: 0;*/
+    box-sizing: border-box;
+    font-family: 'Montserrat';
+  }
+
+  html {
+    scroll-behavior: smooth;
+    height: 100%;
+  }
+  
+  .footer {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      height: 32px;
+      padding-bottom: 16px;
+      background: #111;
+      background: rgba(0,0,0,.90);
+      z-index:2000; 
+      
+      }
