--- a/my-app/src/app/core/components/proyectos/proyectos.component.html
+++ b/my-app/src/app/core/components/proyectos/proyectos.component.html
@@ -1,1 +1,82 @@
-<p>proyectos works!</p>
+<section id="portfolio">
+    <h3 class="titulo-seccion">Mis Proyectos</h3>
+    <div class="portfolio-container">
+      <div class="justify-content-center">
+        <div class="col-md-6 mb-4">
+          <div class="proyecto">
+            <div class="overlay"></div>
+            <img src="../../../../assets/images/proyecto/proyecto1.jpg" alt="">
+            <div class="info">
+              <h4 data-toggle="modal" data-target="#myModal1">Descripción Proyecto 1</h4>
+              <p>Diseño Web</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 mb-4">
+          <div class="proyecto">
+            <div class="overlay"></div>
+            <img src="../../../../assets/images/proyecto/proyecto2.jpg" alt="">
+            <div class="info">
+              <h4 data-toggle="modal" data-target="#myModal2">Descripción Proyecto 2</h4>
+              <p>Diseño Web</p>
+            </div>
+          </div>
+        </div>
+        <!-- Agrega aquí más elementos .col-sm-6 .col-md-4 para más proyectos -->
+      </div>
+    </div>
+  </section>
+  
+  <!-- Modal 1 -->
+  <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title" id="myModalLabel1">Título del Proyecto 1</h4>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>Contenido del proyecto 1...</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <!-- Modal 2 -->
+  <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title" id="myModalLabel2">Título del Proyecto 2</h4>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>Incluyo este mismo proyecto por haber sido un desafío y en el cual que apliqué mis conocimientos en diferentes tecnologías para crear mi propio Portfolio Web.<br> A través de esta experiencia, pude desarrollar habilidades en el campo de la programación y el desarrollo web.<br>
+
+            Para comenzar, se diseño el prototipo de la página. Luego, implementé al Front End tecnologías como HTML, CSS y Bootstrap. Estas tecnologías me permitieron crear una maqueta estática de mi Portfolio Web, aplicando principios de diseño web y personalizando el aspecto visual de la página.<br>
+            
+            Continué desarrollando el Front End dinámico utilizando el framework Angular. Utilicé TypeScript para crear una Single Page Application (SPA) y aprendí a utilizar componentes, servicios y proveedores para diseñar mi página de manera interactiva.<br>
+            
+            En cuanto al Back End, utilicé el lenguaje Java y el framework Spring Boot. Esto me permitió desarrollar las funcionalidades de mi Portfolio Web y crear APIs REST para comunicarme con la base de datos.<br> También implementé una arquitectura en capas y apliqué conceptos de seguridad y autenticación.<br>
+            
+            En el ámbito de las bases de datos, utilicé MySQL para diseñar y crear una base de datos relacional. Identifiqué los datos relevantes para mi proyecto y establecí relaciones entre las entidades de la base de datos.<br>
+            
+            Durante el proceso de desarrollo, también utilicé herramientas de control de versiones como Git y GitHub para administrar y realizar seguimiento de los cambios en mi código. Esto me permitió trabajar de manera colaborativa y tener un historial de versiones de mi proyecto.<br>
+            
+            Finalmente, en la etapa de Deploy, apliqué conocimientos en DevOps. Realicé pruebas para asegurar la calidad de mi aplicación, implementé medidas de seguridad web y realicé la comunicación efectiva de mi proyecto.
+            
+            En resumen, mi proyecto de Portfolio Web me permitió aplicar una variedad de tecnologías, como HTML, CSS, Bootstrap, TypeScript, Angular, Java, Spring Boot, MySQL, UML y herramientas como Figma, Git y GitHub, entre otras.<br> A través de esta experiencia, desarrollé habilidades en diseño web, programación Front End y Back End, bases de datos, Programación Orientada a Objetos y DevOps.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+        </div>
+      </div>
+    </div>
+  </div>
