--- a/my-app/src/app/core/components/skills/skills.component.css
+++ b/my-app/src/app/core/components/skills/skills.component.css
@@ -1,38 +1,37 @@
-#skills {
-    background: linear-gradient( rgba(117, 73, 169, 0.9), rgba(85, 85, 85, 0.95)), url("../../../../assets/images/skills/programas.jpg");
-    background-attachment: fixed;
+  
+  #skills {
+    background: linear-gradient(rgba(117, 73, 169, 0.9), rgba(85, 85, 85, 0.95)), url("../../../../assets/images/skills/programas.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    min-height: 100vh;
+    width: 100%;
     color: rgb(255, 255, 255);
     background-position: center center;
     text-align: center;
-}
+  }
 
-h3{
-    padding-top: 30px;
-}
+  h3 {
+    padding-top: 50px;
+  }
 
 
-.skill {
+  .circle {
     text-align: center;
-    margin-bottom: 30px;
+    margin: 30px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   
 
-  /* Estilos para pantallas pequeñas */
-  @media (max-width: 991px) {
-    .skill {
-      margin-bottom: 60px;
-    }
+  .btn-light {
+    color: #ffffff;
+    background-color: transparent;
+    border-color: transparent;
   }
+
   
-  /* Estilos para pantallas extra pequeñas */
-  @media (max-width: 575px) {
-    .skill {
-      margin-bottom: 30px;
-    }
-  }
-  
+
   /* Clase para proporcionar un color atractivo */
  
 /*
