--- a/my-app/src/app/core/components/acerca-de/acerca-de.component.html
+++ b/my-app/src/app/core/components/acerca-de/acerca-de.component.html
@@ -1,37 +1,27 @@
-<!--<section id="programa" class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-6 col-md-5 col-lg-2">
-          <img src="../../../../assets/images/acerca-de/Perfil.png" class="img-fluid" alt="Imagen del programa">
-        </div>
-        <div class="col-sm-6 col-md-7 col-lg-10">
-          <h2 class="mb-4">Título del programa</h2>
-          <p class="lead mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut eros nisl. Fusce at leo tellus. Integer consectetur urna vitae eros blandit, eu feugiat odio maximus. Praesent bibendum aliquam nulla, sed dignissim mi lobortis vel.</p>
-          <p class="mb-4">Nullam placerat lacus nec nibh maximus, at lacinia metus facilisis. Nunc bibendum elit elit, vel blandit velit gravida eget. Sed a diam mauris. Aenean non sem non sapien consequat consequat.</p>
-        </div>
-      </div>
+
+<div id="sobremi" class="py-5">
+  <div class="container-fluid d-flex flex-wrap justify-content-center align-items-center px-lg-0">
+    <div class="contenedor-foto col-lg-4 col-md-6 col-12 mb-4 mx-auto">
+      <img [src]="imgPerfil" alt="" class="img-fluid rounded">
     </div>
-  </section>-->
-
-
-<section id="sobremi" class="py-5">
-    <div class="container-fluid d-flex flex-wrap justify-content-center align-items-center px-lg-0">
-      <div class="contenedor-foto col-lg-4 col-md-6 col-12 mb-4 mx-auto">
-        <img src={{imgPerfil}} alt="" class="img-fluid rounded">
-      </div>
-      <div class="sobremi col-lg-8 col-md-6 col-12 mb-4 mx-auto">
-        <p class="titulo-seccion mb-0">Sobre Mi</p>
-        <h2>Hola, Soy <br><span>{{ user.nombre }} {{ user.apellido }}</span></h2>
-        <h3 class="mb-4">Desarrollador Web</h3>
-        <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur reprehenderit 
-                        voluptatibus blanditiis nulla adipisci iste fuga expedita, ea exercitationem dicta, 
-                        similique rem, atque soluta recusandae ipsam autem. Sapiente, quo ducimus?</p>
-        <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nam a beatae natus.</p>
-      </div>
+    <div class="sobremi col-lg-8 col-md-6 col-12 mb-4 mx-auto">
+      <h4 class="titulo-seccion mb-0">Sobre Mi 
+        <button class="btn btn-light btn-icon mr-auto" [routerLink]="'/nuevaedu'" *ngIf="isLogged">
+          <i class="bi bi-plus-circle text-primary" ngbTooltip="Agregar Educacion"></i>
+        </button>
+      </h4>
+      <h2>Hola, Soy <br><span>{{ user.nombre }} {{ user.apellido }}</span></h2>
+      <h3 class="mb-4">Desarrollador Web</h3>
+      <p class="mb-4">{{ user.descripcion }}</p>
+      <!--<p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur reprehenderit 
+        voluptatibus blanditiis nulla adipisci iste fuga expedita, ea exercitationem dicta, 
+        similique rem, atque soluta recusandae ipsam autem. Sapiente, quo ducimus?</p>
+      <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nam a beatae natus.</p>-->
     </div>
-</section>
+  </div>
+</div>
 
-
+  
 <!--<div class="card container mt-2 px-0" id="perfil">
     <div class="card-header">
         <h4 class="mb-0">Acerca de</h4>
