--- a/my-app/src/app/core/components/acerca-de/acerca-de.component.html
+++ b/my-app/src/app/core/components/acerca-de/acerca-de.component.html
@@ -1,26 +1,40 @@
 
-<div id="sobremi" class="py-5">
+
+<!-- Si no se está logueado -->
+<div id="sobremi" class="py-5" *ngIf="!isLogged">
   <div class="container-fluid d-flex flex-wrap justify-content-center align-items-center px-lg-0">
-    <div class="contenedor-foto col-lg-4 col-md-6 col-12 mb-4 mx-auto">
-      <img [src]="imgPerfil" alt="" class="img-fluid rounded">
-    </div>
-    <div class="sobremi col-lg-8 col-md-6 col-12 mb-4 mx-auto">
-      <h4 class="titulo-seccion mb-0">Sobre Mi 
-        <button class="btn btn-light btn-icon mr-auto" [routerLink]="'/nuevaedu'" *ngIf="isLogged">
-          <i class="bi bi-plus-circle text-primary" ngbTooltip="Agregar Educacion"></i>
-        </button>
-      </h4>
-      <h2>Hola, Soy <br><span>{{ user.nombre }} {{ user.apellido }}</span></h2>
-      <h3 class="mb-4">Desarrollador Web</h3>
-      <p class="mb-4">{{ user.descripcion }}</p>
-      <!--<p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur reprehenderit 
-        voluptatibus blanditiis nulla adipisci iste fuga expedita, ea exercitationem dicta, 
-        similique rem, atque soluta recusandae ipsam autem. Sapiente, quo ducimus?</p>
-      <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nam a beatae natus.</p>-->
-    </div>
+      <div class="contenedor-foto col-lg-4 col-md-6 col-12 mb-4 mx-auto">
+          <img [src]="imgPerfil" alt="" class="img-fluid rounded">
+      </div>
+      <div class="sobremi col-lg-8 col-md-6 col-12 mb-4 mx-auto">
+          <h4 class="titulo-seccion mb-0">Sobre Mi</h4>
+          <h2>Hola, Soy<br><span>Alejandro Sebastian Villegas</span></h2>
+          <p class="mb-4">
+            <p>Tengo una formación técnica en robótica y una dedicación continua a la programación y la administración, tratando de combinar habilidades técnicas y de gestión, dichos campos.</p>
+            <p>Mi experiencia en robótica me ha introducido en el mundo del diseño y la programación por medio de lenguajes como Python.</p>
+            <p>También he desarrollado habilidades esenciales en el ámbito laboral. Mi capacidad para trabajar en equipo, comunicarme de manera efectiva y adaptarme rápidamente a los cambios me ha permitido colaborar en proyectos multidisciplinarios. Soy proactivo, organizado y siempre en la búsqueda de soluciones innovadoras.</p>
+            <p>Además, me gusta encontrar oportunidades para expandir mis conocimientos y mejorar mis habilidades. Ya sea a través de cursos, talleres o proyectos, trato de mantenerme actualizado en las últimas tendencias y avances tecnológicos.</p>
+      </div>
   </div>
 </div>
 
+<!-- Si se está logueado -->
+<div id="sobremi" class="py-5" *ngIf="isLogged">
+  <div class="container-fluid d-flex flex-wrap justify-content-center align-items-center px-lg-0">
+      <div class="contenedor-foto col-lg-4 col-md-6 col-12 mb-4 mx-auto">
+          <img [src]="imgPerfil" alt="" class="img-fluid rounded">
+      </div>
+      <div class="sobremi col-lg-8 col-md-6 col-12 mb-4 mx-auto">
+          <h4 class="titulo-seccion mb-0">Sobre Mi
+              <button class="btn btn-light btn-icon mr-auto" [routerLink]="'/editacercaDe/id'"
+                  ngbTooltip="Actualizar información">Editar
+              </button>
+          </h4>
+          <h2>Hola, Soy <br><span>{{ user.nombre }} {{ user.apellido }}</span></h2>
+          <p class="mb-4">{{ user.descripcion }}</p>
+      </div>
+  </div>
+</div>
   
 <!--<div class="card container mt-2 px-0" id="perfil">
     <div class="card-header">
