--- a/my-app/src/app/core/components/acerca-de/edit-acerca-de.component.html
+++ b/my-app/src/app/core/components/acerca-de/edit-acerca-de.component.html
@@ -11,7 +11,7 @@
                     <input type="text" class="form-control" id="apellido"name="apellido"[(ngModel)]="user.apellido"required>
                 </div>
                 <div class="form-group">
-                    <label for="descripcion">Descripción personal </label>
+                    <label for="descripcion">Descripción Personal </label>
                     <input type="text" class="form-control" id="descripcion"name="descripcion"[(ngModel)]="user.descripcion"required>
                 </div>
                 <div class="form-group">
