--- a/my-app/src/app/core/components/login/login.component.html
+++ b/my-app/src/app/core/components/login/login.component.html
@@ -1,4 +1,42 @@
-<section class="vh-100 gradient-custom">
+<section class=" gradient-custom" style="min-height: 80vh">
+  <div class="container p-3">
+    <div class="row justify-content-center align-items-center p-3">
+      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+        <div class="card bg-dark text-white" style="border-radius: 1rem;">
+          <div class="card-body p-4 text-center">
+
+            <h2 class="fw-bold mb-3 text-uppercase">Login</h2>
+            <p class="text-white-50 mb-4">Por favor, ingresar usuario y clave</p>
+
+            <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
+
+              <div class="form-outline form-white mb-3">
+                <input type="email" id="nombreUsuario" name="nombreUsuario" class="form-control form-control-lg" [(ngModel)]="nombreUsuario" required />
+                <label class="form-label" for="nombreUsuario">Usuario</label>
+              </div>
+
+              <div class="form-outline form-white mb-3">
+                <input type="password" id="password" name="password" class="form-control form-control-lg" [(ngModel)]="password" required />
+                <label class="form-label" for="password">Password</label>
+              </div>
+
+              <button class="btn btn-outline-light btn-lg px-4" type="submit">Login</button>
+
+            </form>
+
+            <p class="mb-0 mt-3">¿No tienes una cuenta? <a href="#!" class="text-white-50 fw-bold">Sign Up</a></p>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+
+<!--<section class="vh-100 gradient-custom">
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-12 col-md-8 col-lg-6 col-xl-5">
@@ -24,7 +62,7 @@
                   <label class="form-label" for="password">Password</label>
                 </div>
 
-                <!-- <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p> -->
+                 <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p> 
 
                 <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
 
@@ -43,7 +81,7 @@
     </div>
   </div>
 </section>
-
+-->
 
 <!--<section class="vh-25 gradient-custom">
     <div class="container py-5 h-25">
