--- a/my-app/src/app/core/components/proyectos/proyectos.component.html
+++ b/my-app/src/app/core/components/proyectos/proyectos.component.html
@@ -5,20 +5,38 @@
         <div class="col-md-6 mb-4">
           <div class="proyecto">
             <div class="overlay"></div>
-            <img src="../../../../assets/images/proyecto/proyecto1.jpg" alt="">
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="../../../../assets/images/proyecto/Proyecto1.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="../../../../assets/images/proyecto/Proyecto1.1.jpg" class="d-block w-100" alt="...">
+                </div>                
+              </div>
+              <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-target="#carouselExampleControls" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </button>
+            </div>
+
             <div class="info">
-              <h4 data-toggle="modal" data-target="#myModal1">Descripción Proyecto 1</h4>
-              <p>Diseño Web</p>
+              <h5 data-toggle="modal" data-target="#myModal1">Descripción Proyecto 1</h5>
+              <p><a href="https://www.eldiariodelarepublica.com/nota/2022-7-20-8-10-0-inteligencia-artificial-la-upro-tiene-sus-primeros-egresados"target="_blank">Nota periodística</a></p>
             </div>
           </div>
         </div>
         <div class="col-md-6 mb-4">
           <div class="proyecto">
             <div class="overlay"></div>
-            <img src="../../../../assets/images/proyecto/proyecto2.jpg" alt="">
+            <img src="../../../../assets/images/proyecto/Proyecto2.jpg" alt="">
             <div class="info">
-              <h4 data-toggle="modal" data-target="#myModal2">Descripción Proyecto 2</h4>
-              <p>Diseño Web</p>
+              <h5 data-toggle="modal" data-target="#myModal2">Descripción Proyecto 2</h5>
+              <p><a href="#"target="_blank">Mas información...</a></p>
             </div>
           </div>
         </div>
@@ -32,13 +50,26 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title" id="myModalLabel1">Título del Proyecto 1</h4>
+          <h4 class="modal-title" id="myModalLabel1">Proyecto Final de Robótica</h4>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div class="modal-body">
-          <p>Contenido del proyecto 1...</p>
+        <div class="modal-body" style="max-height: 300px; overflow-y: auto;">
+          <p>Este proyecto integra la comunicación Modbus entre un "BRAZO MÉCANICO UR5" y un "MIR100" utilizando un PLC LOGOSOFT 8 conectado en la misma red.</p>
+
+          <p>El proceso se inicia con un pulsador que cambia un registro en el MIR100, lo cual activa su recorrido, de transporte de figuras geométricas, hacia la estación del brazo robot UR5. Una vez que el MIR100 llega a la estación del robot, cambia un registro indicando que ha alcanzado la posición deseada.</p>
+
+          <p>El programa del BRAZO MÉCANICO UR5 espera una entrada de registro enviada por el MIR100 al llegar a una posición preseleccionada. Al recibir este registro, el UR5 se posiciona en un punto de paso previamente definido y envía una salida de registro hacia el MIR100 para que se detenga en dicha posición.</p>
+          
+          <p>El UR5 se posiciona en Home y captura imágenes del área de trabajo utilizando una cámara 3D. Mediante algoritmos de procesamiento de imágenes, se detectan y clasifican figuras geométricas.</p>
+
+          <p>Una vez detectada la figura, el UR5 se desplaza hacia las coordenadas correspondientes, sujeta la figura con su Gripper y la coloca en la posición adecuada.</p>
+
+          <p>Posteriormente, se envía un registro al MIR100 para reanudar la misión. El MIR100 regresa a su estación de carga y, al llegar, cambia un registro para que el PLC detecte el fin del proceso y envíe la señal de STOP.</p>
+
+          <p>El UR5 se mueve hacia la posición de depósito de la figura y luego regresa a su posición de inicio.</p>
+
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -52,28 +83,28 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title" id="myModalLabel2">Título del Proyecto 2</h4>
+          <h4 class="modal-title" id="myModalLabel2">Portfolio Argentina Programa</h4>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div class="modal-body">
-          <p>Incluyo este mismo proyecto por haber sido un desafío y en el cual que apliqué mis conocimientos en diferentes tecnologías para crear mi propio Portfolio Web.<br> A través de esta experiencia, pude desarrollar habilidades en el campo de la programación y el desarrollo web.<br>
-
-            Para comenzar, se diseño el prototipo de la página. Luego, implementé al Front End tecnologías como HTML, CSS y Bootstrap. Estas tecnologías me permitieron crear una maqueta estática de mi Portfolio Web, aplicando principios de diseño web y personalizando el aspecto visual de la página.<br>
+        <div class="modal-body" style="max-height: 300px; overflow-y: auto;">
+              <p>Decidí incluir este proyecto por considerarlo un desafío personal, transmitiendo los conocimientos que fui adquiriendo a lo largo de mi trayecto en el curso y abarcando diversas tecnologías en el desarrollo de mi propio Portfolio Web. </p>
             
-            Continué desarrollando el Front End dinámico utilizando el framework Angular. Utilicé TypeScript para crear una Single Page Application (SPA) y aprendí a utilizar componentes, servicios y proveedores para diseñar mi página de manera interactiva.<br>
+              <p>Comencé por diseñar el prototipo de la página y luego implementé tecnologías de Front-End como HTML, CSS y Bootstrap para crear una maqueta estática y atractiva visualmente.</p>
             
-            En cuanto al Back End, utilicé el lenguaje Java y el framework Spring Boot. Esto me permitió desarrollar las funcionalidades de mi Portfolio Web y crear APIs REST para comunicarme con la base de datos.<br> También implementé una arquitectura en capas y apliqué conceptos de seguridad y autenticación.<br>
+              <p>Continué el desarrollo del Front-End utilizando el framework Angular y aprovechando TypeScript para crear una experiencia interactiva y amable para los usuarios.</p>
             
-            En el ámbito de las bases de datos, utilicé MySQL para diseñar y crear una base de datos relacional. Identifiqué los datos relevantes para mi proyecto y establecí relaciones entre las entidades de la base de datos.<br>
+              <p>En cuanto al Back-End, utilicé Java y el framework Spring Boot para desarrollar las funcionalidades del sitio web y crear APIs REST para interactuar con la base de datos. También implementé medidas de seguridad y autenticación para garantizar la protección de la información.</p>
             
-            Durante el proceso de desarrollo, también utilicé herramientas de control de versiones como Git y GitHub para administrar y realizar seguimiento de los cambios en mi código. Esto me permitió trabajar de manera colaborativa y tener un historial de versiones de mi proyecto.<br>
+              <p>En el ámbito de las bases de datos, utilicé MySQL para diseñar y crear una estructura de base de datos, definiendo relaciones entre las entidades y garantizando una gestión efectiva de los datos.</p>
             
-            Finalmente, en la etapa de Deploy, apliqué conocimientos en DevOps. Realicé pruebas para asegurar la calidad de mi aplicación, implementé medidas de seguridad web y realicé la comunicación efectiva de mi proyecto.
+              <p>Durante todo el proceso de desarrollo, utilicé herramientas de control de versiones como Git y GitHub para gestionar los cambios y mantener un historial de versiones del proyecto.</p>
             
-            En resumen, mi proyecto de Portfolio Web me permitió aplicar una variedad de tecnologías, como HTML, CSS, Bootstrap, TypeScript, Angular, Java, Spring Boot, MySQL, UML y herramientas como Figma, Git y GitHub, entre otras.<br> A través de esta experiencia, desarrollé habilidades en diseño web, programación Front End y Back End, bases de datos, Programación Orientada a Objetos y DevOps.</p>
-        </div>
+              <p>Finalmente, en la etapa de despliegue (Deploy), apliqué prácticas de DevOps para garantizar la calidad de la aplicación, realizar pruebas para asegurar una comunicación óptima.</p>
+            
+              <p>En síntesis, este proyecto fue una oportunidad para aplicar una amplia gama de tecnologías, desde HTML, CSS y Bootstrap hasta TypeScript, Angular, Java, Spring Boot y MySQL. Además, adquirí experiencia en diseño web, programación Front-End y Back-End, gestión de bases de datos y DevOps.</p>
+          </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
         </div>
