--- a/my-app/src/app/shared/components/menu/menu.component.html
+++ b/my-app/src/app/shared/components/menu/menu.component.html
@@ -23,9 +23,9 @@
       <li class="nav-item">
           <a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" routerLink="/proyectos">Proyectos</a>
       </li>
-      <li class="nav-item">
+      <!--<li class="nav-item">
           <a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" routerLink="/contacto">Contacto</a>
-      </li>
+      </li>-->
     </ul>
   </div>
 </nav>
