Soluciones a problemas de incompatibilidades, se cambia a @angular/cli 13.3.11, se hacen modificaciones en algunos componentes.

--- a/my-app/src/app/core/components/acerca-de/acerca-de.component.html
+++ b/my-app/src/app/core/components/acerca-de/acerca-de.component.html
@@ -9,8 +9,8 @@
       <div class="sobremi col-lg-8 col-md-6 col-12 mb-4 mx-auto">
           <h4 class="titulo-seccion mb-0">Sobre Mi</h4>
           <h2>Hola, Soy<br><span>Alejandro Sebastian Villegas</span></h2>
-          <p class="mb-4">
-            <p>Tengo una formación técnica en robótica y una dedicación continua a la programación y la administración, tratando de combinar habilidades técnicas y de gestión, dichos campos.</p>
+            <p class="mb-0 text-justifY">
+            <p>Tengo una formación técnica en robótica y una dedicación continua a la programación y la administración.</p>
             <p>Mi experiencia en robótica me ha introducido en el mundo del diseño y la programación por medio de lenguajes como Python.</p>
             <p>También he desarrollado habilidades esenciales en el ámbito laboral. Mi capacidad para trabajar en equipo, comunicarme de manera efectiva y adaptarme rápidamente a los cambios me ha permitido colaborar en proyectos multidisciplinarios. Soy proactivo, organizado y siempre en la búsqueda de soluciones innovadoras.</p>
             <p>Además, me gusta encontrar oportunidades para expandir mis conocimientos y mejorar mis habilidades. Ya sea a través de cursos, talleres o proyectos, trato de mantenerme actualizado en las últimas tendencias y avances tecnológicos.</p>
