--- a/my-app/src/app/core/components/experiencia/experiencia.component.html
+++ b/my-app/src/app/core/components/experiencia/experiencia.component.html
@@ -1,5 +1,33 @@
+<div class="d-flex justify-content-center align-items-center" style="min-height: 80vh" id="fondo-exp" *ngIf="!isLogged">
+  <div class="card container mt-2 px-0 mb-3">
+      <div class="card-header text-center">
+          <h4 class="mb-0">
+              Experiencia laboral
+          </h4>
+      </div>
+      <div class="card-body">
+        <div class="row">
+          <div class="col-12">
+            <div class="d-flex align-items-center justify-content-center flex-column">
+              <h5 class="mb-4">Universidad Provincial de Oficios "Eva Perón"</h5>
+              <p class="mb-1 text-center">Auxiliar de la carrera de Robótica </p>
+              <p class="mb-0 text-justify">
+                <strong class="underline">Tareas realizadas:</strong><br>
+                Participación en la organización y presentación del stand de la universidad en la Expo Rural N°91.<br>
+                Colaboración en la exposición de los programas educativos de la universidad, respondiendo preguntas sobre la carrera
+                de Robótica y sus contenidos a los visitantes del evento. Brindando además soporte en la atención a los interesados, en
+                obtener más información sobre la  universidad y sus programas educativos. 
+              </p>
+              <p class="mb-0 text-center">09/2022 - 10/2022</p>
+              <hr>     
+            </div>
+          </div>
+        </div>
+      </div>
+</div>
 
-<div class="d-flex justify-content-center align-items-center" style="min-height: 80vh" id="fondo-exp">
+
+<div class="d-flex justify-content-center align-items-center" style="min-height: 80vh" id="fondo-exp" *ngIf="isLogged">
     <div class="card container mt-2 px-0 mb-3">
         <div class="card-header text-center">
             <h4 class="mb-0">
