--- a/my-app/src/app/core/components/skills/skills.component.html
+++ b/my-app/src/app/core/components/skills/skills.component.html
@@ -1,7 +1,41 @@
+<div class="container-fluid" id="skills" *ngIf="!isLogged">
+  <h3>Hard & Soft Skills </h3>
+  <div class="row">
+    <div class="col-sm-4 col-md-4 col-lg-4 circle" *ngFor="let skill of hardsoftskills">
+        <circle-progress
+          [title]="skill.name"
+          [titleColor]="'rgba(239, 207, 227)'"
+          [titleFontSize]="skill.wordSize ? skill.wordSize.toString() : '17'"
+          [titleFontWeight]="'700'"
+          [units]="''"
+          [percent]="skill.percent" 
+          [subtitle]="skill.percent + '%'"
+          [subtitleColor]="'rgba(226, 115, 150)'"
+          [subtitleFontSize]="'15'"
+          [subtitleFontWeight]="'700'"
+          [radius]="80"
+          [space]="-10"
+          [outerStrokeGradient]="true"
+          [outerStrokeGradientStopColor]="'rgba(181, 23, 158, 1)'"
+          [outerStrokeWidth]="10"
+          [innerStrokeWidth]="10"
+          [outerStrokeColor]="'rgba(247, 37, 133, 1)'"
+          [innerStrokeColor]="'#e7e8ea'"
+          [animation]="true"
+          [animateTitle]="false"
+          [animationDuration]="1000"
+          [showBackground]="false"
+          [clockwise]="false"
+          [startFromZero]="false"
+          [lazy]="true"
+        ></circle-progress>
+        </div>
+      </div>
+  </div>
 
-<div class="container-fluid" id="skills">
+<div class="container-fluid" id="skills" *ngIf="isLogged">
   <h3>Hard and Soft Skills
-    <button type="button" class="btn btn-light btn-icon mr-auto" routerLink="/newskill/" *ngIf="isLogged">
+    <button type="button" class="btn btn-light btn-icon mr-auto" routerLink="/newskill/">
       <i class="bi bi-plus-circle" ngbTooltip="Agregar Skill"></i>
     </button>
   </h3>
@@ -11,7 +45,7 @@
         <circle-progress
           [title]="skill.nombre"
           [titleColor]="'rgba(239, 207, 227)'"
-          [titleFontSize]="'20'"
+          [titleFontSize]="'20'" 
           [titleFontWeight]="'700'"
           [units]="''"
           [percent]="skill.porcentaje" 
@@ -36,10 +70,10 @@
           [lazy]="true"
         ></circle-progress>
         <div class="text-center d-flex justify-content-center">
-          <button class="btn btn-light mr-2" routerLink="/editskill/{{skill.id}}" *ngIf="isLogged">
+          <button class="btn btn-light mr-2" routerLink="/editskill/{{skill.id}}">
             <i class="bi bi-pencil-fill" ngbTooltip="Editar Educacion"></i>
           </button>
-          <button class="btn btn-light" (click)="delete(skill.id)" *ngIf="isLogged">
+          <button class="btn btn-light" (click)="delete(skill.id)">
             <i class="bi bi-trash-fill" ngbTooltip="Eliminar Educacion"></i>
           </button>
         </div>
