--- a/my-app/src/app/core/components/acerca-de/edit-acerca-de.component.html
+++ b/my-app/src/app/core/components/acerca-de/edit-acerca-de.component.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="form-group">
                     <label for="img">Añadir imagen de perfil</label>
-                    <input type="file" class="form-control" id="img"name="img"[(ngModel)]="user.img"(change)="uploadImage($event)" accept=".png, .jpg, .jpeg">
+                    <input type="file" class="form-control" id="img"name="img"[(ngModel)]="user.img"(change)="onFileSelected($event)" accept=".png, .jpg, .jpeg">
                 </div>
                 <div class="d-flex justify-content-between">
                     <button class="btn btn-primary">Aceptar</button>
