"Mejoras de código, imágenes y manejo de errores"
Descripción detallada:
-Se realizaron cambios y verificaciones en varios componentes, se elimino código comentado, mejorando la legibilidad y mantenibilidad del código base.
-Se agregó una imagen al componente Acerca de.
-Se corrigió un fallo que causaba que no se mostrara el contenido de la pagina una vez logueado.

--- a/my-app/src/app/core/components/acerca-de/acerca-de.component.html
+++ b/my-app/src/app/core/components/acerca-de/acerca-de.component.html
@@ -1,5 +1,3 @@
-
-
 <!-- Si no se está logueado -->
 <div id="sobremi" class="py-5" *ngIf="!isLogged">
   <div class="container-fluid d-flex flex-wrap justify-content-center align-items-center px-lg-0">
@@ -8,8 +6,8 @@
       </div>
       <div class="sobremi col-lg-8 col-md-6 col-12 mb-4 mx-auto">
           <h4 class="titulo-seccion mb-0">Sobre Mi</h4>
-          <h2>Hola, Soy<br><span>Alejandro Sebastian Villegas</span></h2>
-            <p class="mb-0 text-justifY">
+          <h2>Hola, Soy<br><span>Alejandro Sebastián Villegas</span></h2>
+          <p class="mb-0 text-justify">
             <p>Tengo una formación técnica en robótica y una dedicación continua a la programación y la administración.</p>
             <p>Mi experiencia en robótica me ha introducido en el mundo del diseño y la programación por medio de lenguajes como Python.</p>
             <p>También he desarrollado habilidades esenciales en el ámbito laboral. Mi capacidad para trabajar en equipo, comunicarme de manera efectiva y adaptarme rápidamente a los cambios me ha permitido colaborar en proyectos multidisciplinarios. Soy proactivo, organizado y siempre en la búsqueda de soluciones innovadoras.</p>
@@ -22,64 +20,18 @@
 <div id="sobremi" class="py-5" *ngIf="isLogged">
   <div class="container-fluid d-flex flex-wrap justify-content-center align-items-center px-lg-0">
       <div class="contenedor-foto col-lg-4 col-md-6 col-12 mb-4 mx-auto">
-          <img src={{ user.img }} alt="" class="img-fluid rounded">
+          <img *ngIf="user.img" [src]="user.img" alt="" class="img-fluid rounded">
       </div>
       <div class="sobremi col-lg-8 col-md-6 col-12 mb-4 mx-auto">
           <h4 class="titulo-seccion mb-0">Sobre Mi
-              <button class="btn btn-light btn-icon mr-auto" [routerLink]="'/editacercaDe/id'"
-                  ngbTooltip="Actualizar información">Editar
-              </button>
+              <button class="btn btn-light btn-icon mr-auto" [routerLink]="'/editacercaDe/' + user.id">
+                <i class="bi bi-plus-circle text-dark" ngbTooltip="Actualizar información"></i>
+            </button>
           </h4>
           <h2>Hola, Soy <br><span>{{ user.nombre }} {{ user.apellido }}</span></h2>
           <p class="mb-4">{{ user.descripcion }}</p>
       </div>
   </div>
 </div>
+
   
-<!--<div class="card container mt-2 px-0" id="perfil">
-    <div class="card-header">
-        <h4 class="mb-0">Acerca de</h4>
-    </div>
-    <div class="card-body">
-        <div class="row">
-            <img class="col-xs-12 col-lg-3 rounded-circle contenedor-foto" src="../../../../assets/images/acerca-de/Perfil.png">
-            <p class="col-xs-12 col-lg-9" style="font-size: 10pt;">Me llamo NOMBRE Y APELLIDO, soy ingeniero en informática. Me desarrollo en el ámbito desde los 18 años y me apasiona el mundo de la tecnología. Mi trabajo me ha proporcionado profundos conocimientos sobre el desarrollo de sistemas webs, desde la concepción de la arquitectura inicial hasta su implementación final. A pesar de mi gran orientación en del desarrollo de software, mi formación y conocimientos me permiten tener una visión global del conjunto a diseñar, pudiendo así proponer soluciones y una mejora de los resultados obtenidos.</p>
-        </div>
-    </div>
-</div>-->
-
-<!--<section id="sobremi" class="py-5">
-    <div class="container mx-auto fixed">
-        <div class="col-md-6">
-          <div class="contenedor-foto">
-            <img src="../../../../assets/images/acerca-de/Perfil.png" alt="" >
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="sobremi">
-            <p class="titulo-seccion">Sobre Mi</p>
-            <h2>Hola, Soy <span>Lucas Perez</span></h2>
-            <h3>Desarrollador Web</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur reprehenderit voluptatibus blanditiis nulla adipisci iste fuga expedita, ea exercitationem dicta, similique rem, atque soluta recusandae ipsam autem. Sapiente, quo ducimus?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nam a beatae natus.</p>
-          </div>
-        </div>
-      </div>
-  </section>-->
-
-
-<!--<section id="sobremi" class="py-5">
-    <div class="container-lg d-flex flex-wrap justify-content-center align-items-center">
-      <div class="contenedor-foto col-lg-4 col-md-6 col-12 mb-4">
-        <img src="../../../../assets/images/acerca-de/Perfil.png" alt="" class="img-fluid rounded">
-      </div>
-      <div class="sobremi col-lg-8 col-md-6 col-12 mb-4">
-        <p class="titulo-seccion mb-0">Sobre Mi</p>
-        <h2>Hola, Soy <span>Lucas Perez</span></h2>
-        <h3 class="mb-4">Desarrollador Web</h3>
-        <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur reprehenderit voluptatibus blanditiis nulla adipisci iste fuga expedita, ea exercitationem dicta, similique rem, atque soluta recusandae ipsam autem. Sapiente, quo ducimus?</p>
-        <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nam a beatae natus.</p>
-        <a href="#" class="btn btn-primary">Contactar</a>
-      </div>
-    </div>
-  </section>-->
