--- a/my-app/src/app/core/components/acerca-de/edit-acerca-de.component.html
+++ b/my-app/src/app/core/components/acerca-de/edit-acerca-de.component.html
@@ -17,11 +17,14 @@
                 <div class="form-group">
                     <label for="img">Añadir imagen de perfil</label>
                     <input type="file" class="form-control" id="img"name="img"[(ngModel)]="user.img"(change)="onFileSelected($event)" accept=".png, .jpg, .jpeg">
+                    <div class="image-container">
+                        <img *ngIf="user.img" [src]="user.img" alt="Imagen seleccionada" class="selected-image">
+                    </div>
                 </div>
                 <div class="d-flex justify-content-between">
                     <button class="btn btn-primary">Aceptar</button>
-                    <button class="btn btn-secondary" routerLink="/educacion">Cancelar</button>
-                  </div>
+                    <button class="btn btn-secondary" routerLink="/acercade">Cancelar</button>
+                </div>
             </form>
         </div>
     </div>
