--- a/my-app/src/app/core/components/educacion/educacion.component.css
+++ b/my-app/src/app/core/components/educacion/educacion.component.css
@@ -63,6 +63,10 @@
     max-height: 4rem;
   }
   
+  .underline {
+    text-decoration: underline;
+  }
+  
   .text-primary {
     color: #ffffff!important;
   }
