--- a/my-app/src/app/core/components/experiencia/experiencia.component.html
+++ b/my-app/src/app/core/components/experiencia/experiencia.component.html
@@ -1,4 +1,5 @@
-<div class="d-flex justify-content-center align-items-center" style="min-height: 80vh" id="fondo-exp" *ngIf="!isLogged">
+<!-- Código para mostrar cuando el usuario no está logueado -->
+<!--<div class="d-flex justify-content-center align-items-center" style="min-height: 80vh" id="fondo-exp" *ngIf="!isLogged">
   <div class="card container mt-2 px-0 mb-3">
       <div class="card-header text-center">
           <h4 class="mb-0">
@@ -24,46 +25,143 @@
           </div>
         </div>
       </div>
-</div>
+</div>-->
 
-
-<div class="d-flex justify-content-center align-items-center" style="min-height: 80vh" id="fondo-exp" *ngIf="isLogged">
-    <div class="card container mt-2 px-0 mb-3">
-        <div class="card-header text-center">
-            <h4 class="mb-0">
-                Experiencia laboral
-                <button class="btn btn-light btn-icon mr-auto" routerLink="/nuevaexp" *ngIf="isLogged">
-                    <i class="bi bi-plus-circle" placement="bottom" ngbTooltip="Agregar Experiencia"></i>
-                </button>
-            </h4>
+<!-- Código para mostrar cuando el usuario está logueado--> 
+<div class="d-flex justify-content-center align-items-center" style="min-height: 80vh" id="fondo-exp">
+  <div class="card container mt-2 px-0 mb-3">
+    <div class="card-header text-center">
+      <h4 class="mb-0">
+        Experiencia laboral
+        <button class="btn btn-light btn-icon mr-auto" routerLink="/nuevaexp" *ngIf="isLogged">
+          <i class="bi bi-plus-circle" placement="bottom" ngbTooltip="Agregar Experiencia"></i>
+        </button>
+      </h4>
+    </div>
+    <div class="card-body">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="d-flex align-items-center justify-content-center flex-column" *ngIf="!isLogged">
+            <h5 class="mb-4">Universidad Provincial de Oficios "Eva Perón"</h5>
+            <p class="mb-1 text-center">Auxiliar de la carrera de Robótica </p>
+            <p class="mb-0 text-justify">
+              <strong class="underline">Tareas realizadas:</strong><br>
+              Participación en la organización y presentación del stand de la universidad en la Expo Rural N°91.<br>
+              Colaboración en la exposición de los programas educativos de la universidad, respondiendo preguntas sobre la carrera
+              de Robótica y sus contenidos a los visitantes del evento. Brindando además soporte en la atención a los interesados, en
+              obtener más información sobre la  universidad y sus programas educativos. 
+            </p>
+            <p class="mb-0 text-center">09/2022 - 10/2022</p>
+            <hr>     
+          </div>
+          <table *ngIf="isLogged">
+            <tbody>
+              <tr *ngFor="let Experiencia of experiencia">
+                <td>
+                  <div class="d-flex align-items-center">
+                    <h5 class="mr-2">
+                      {{Experiencia.nombreE}}
+                      <button class="btn btn-light mr-2" routerLink="/editexp/{{Experiencia.id}}"*ngIf="isLogged">
+                        <i class="bi bi-pencil-fill" ngbTooltip="Editar Experiencia"></i>
+                      </button>
+                      <button class="btn btn-light" (click)="delete(Experiencia.id)" *ngIf="isLogged">
+                        <i class="bi bi-trash-fill" ngbTooltip="Eliminar Experiencia"></i>
+                      </button>
+                    </h5>
+                  </div>
+                  <p>{{Experiencia.descripcionE}}</p>
+                  <hr>
+                </td>
+              </tr>
+            </tbody>
+          </table>
         </div>
-        <div class="card-body">
-            <div class="row">
-                <div class="col-lg-12">
-                  <div class="col-xs-8 col-lg-10 d-flex align-items-center">
-                        <tbody>
-                            <tr *ngFor="let Experiencia of expe">
-                                <td>
-                                    <div class="d-flex align-items-center">
-                                        <h5 class="mr-2">
-                                            {{Experiencia.nombreE}}                                            
-                                            <button class="btn btn-light mr-2" routerLink="/editexp/{{Experiencia.id}}" *ngIf="isLogged">
-                                                <i class="bi bi-pencil-fill" ngbTooltip="Editar Experiencia"></i>
-                                            </button>
-                                            <button class="btn btn-light" (click)="delete(Experiencia.id)" *ngIf="isLogged">
-                                                <i class="bi bi-trash-fill" ngbTooltip="Eliminar Experiencia"></i>
-                                            </button>                                          
-                                        </h5>
-                                    </div>
-                                    <p>{{Experiencia.descripcionE}}</p>
-                                    <hr>
-                                </td>
-                            </tbody>
+      </div>
+    </div>
+  </div>
+</div>
+  
+  <!--<div class="card container mt-2 px-0 mb-3">
+    <div class="card-header text-center">
+      <h4 class="mb-0">
+        Experiencia laboral
+        <button class="btn btn-light btn-icon mr-auto" routerLink="/nuevaexp">
+          <i class="bi bi-plus-circle text-primary" ngbTooltip="Agregar Educacion"></i>
+        </button>
+      </h4>
+    </div>
+    <div class="card-body">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="col-xs-8 col-lg-10 d-flex align-items-center">
+            <table>
+              <tbody>
+                <tr *ngFor="let Experiencia of experiencia">
+                  <td>
+                    <div class="d-flex align-items-center">
+                      <h5 class="mr-2">
+                        {{Experiencia.nombreE}}                                                        
+                        <button class="btn btn-light mr-2" routerLink="/editedu/{{Experiencia.id}}">
+                          <i class="bi bi-pencil-fill" ngbTooltip="Editar Educacion"></i>
+                        </button>
+                        <button class="btn btn-light" (click)="delete(Experiencia.id)">
+                          <i class="bi bi-trash-fill" ngbTooltip="Eliminar Educacion"></i>
+                        </button>                                    
+                      </h5>
                     </div>
-                </div>
-            </div>
+                    <p>{{Experiencia.descripcionE}}</p>                                           
+                    <hr>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
-</div>
+    </div>
+</div>-->
+
+<!-- Código para mostrar cuando el usuario está logueado 
+<div class="d-flex justify-content-center align-items-center" style="min-height: 80vh" id="fondo-exp" *ngIf="!isLogged"></div>
+  <div class="card container mt-2 px-0 mb-3">
+    <div class="card-header text-center">
+      <h4 class="mb-0">
+        Experiencia laboral
+        <button class="btn btn-light btn-icon mr-auto" routerLink="/nuevaexp">
+          <i class="bi bi-plus-circle" placement="bottom" ngbTooltip="Agregar Experiencia"></i>
+        </button>
+      </h4>
+    </div>
+  </div>
+</div>-->
+    <!--<div class="card-body">
+      <div class="row">
+        <div class="col-lg-12">
+          <table>
+            <tbody>
+              <tr *ngFor="let Experiencia of experiencia">
+                <td>
+                  <div class="d-flex align-items-center">
+                    <h5 class="mr-2">
+                      {{Experiencia.nombreE}}
+                      <button class="btn btn-light mr-2" routerLink="/editexp/{{Experiencia.id}}">
+                        <i class="bi bi-pencil-fill" ngbTooltip="Editar Experiencia"></i>
+                      </button>
+                      <button class="btn btn-light" (click)="delete(Experiencia.id)">
+                        <i class="bi bi-trash-fill" ngbTooltip="Eliminar Experiencia"></i>
+                      </button>
+                    </h5>
+                  </div>
+                  <p>{{Experiencia.descripcionE}}</p>
+                  <hr>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>-->
 
 
     <!--<div class="container">
