--- a/my-app/src/app/core/components/skills/edit-skill.component.html
+++ b/my-app/src/app/core/components/skills/edit-skill.component.html
@@ -1,9 +1,9 @@
 <div class="container" *ngIf="skill">
     <div class="row">
         <div class="col-md-12">
-            <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
+            <form (ngSubmit)="onUpdate()" novalidate #f="ngForm"> 
                 <div class="form-group">
-                    <label for="nombre">Nombre de Skill</label>
+                    <label for="name">Nombre de Skill</label>
                     <input type="text" class="form-control" id="nombre" name="nombre" [(ngModel)]="skill.nombre" required>
                 </div>
                 <div class="form-group">
