--- a/my-app/src/app/core/components/skills/skills.component.html
+++ b/my-app/src/app/core/components/skills/skills.component.html
@@ -1,3 +1,4 @@
+<!-- Código para mostrar cuando el usuario no está logueado -->
 <div class="container-fluid" id="skills" *ngIf="!isLogged">
   <h3>Hard & Soft Skills </h3>
   <div class="row">
@@ -33,6 +34,7 @@
       </div>
   </div>
 
+<!-- Código para mostrar cuando el usuario está logueado -->
 <div class="container-fluid" id="skills" *ngIf="isLogged">
   <h3>Hard and Soft Skills
     <button type="button" class="btn btn-light btn-icon mr-auto" routerLink="/newskill/">
@@ -42,275 +44,43 @@
 
   <div class="row">
     <div class="col-sm-4 col-md-4 col-lg-4 circle" *ngFor="let skill of skill">
-        <circle-progress
-          [title]="skill.nombre"
-          [titleColor]="'rgba(239, 207, 227)'"
-          [titleFontSize]="'20'" 
-          [titleFontWeight]="'700'"
-          [units]="''"
-          [percent]="skill.porcentaje" 
-          [subtitle]="skill.porcentaje + '%'"
-          [subtitleColor]="'rgba(226, 115, 150)'"
-          [subtitleFontSize]="'15'"
-          [subtitleFontWeight]="'700'"
-          [radius]="80"
-          [space]="-10"
-          [outerStrokeGradient]="true"
-          [outerStrokeGradientStopColor]="'rgba(181, 23, 158, 1)'"
-          [outerStrokeWidth]="10"
-          [innerStrokeWidth]="10"
-          [outerStrokeColor]="'rgba(247, 37, 133, 1)'"
-          [innerStrokeColor]="'#e7e8ea'"
-          [animation]="true"
-          [animateTitle]="false"
-          [animationDuration]="1000"
-          [showBackground]="false"
-          [clockwise]="false"
-          [startFromZero]="false"
-          [lazy]="true"
-        ></circle-progress>
-        <div class="text-center d-flex justify-content-center">
-          <button class="btn btn-light mr-2" routerLink="/editskill/{{skill.id}}">
-            <i class="bi bi-pencil-fill" ngbTooltip="Editar Educacion"></i>
-          </button>
-          <button class="btn btn-light" (click)="delete(skill.id)">
-            <i class="bi bi-trash-fill" ngbTooltip="Eliminar Educacion"></i>
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-
-
-
-
-
-
-
-<!--<div class="container-fluid" id="skills">
-  <h3>Hard Skills</h3>
-  <button type="button" class="btn btn-primary btn-icon float-lg-end" routerLink="/newskill/" *ngIf="isLogged">
-    <i class="bi bi-plus" ngbTooltip="Nueva Skill"></i>
-  </button>
-  <div class="row">
-    <div class="col-lg-4 col-md-6 col-sm-12 col-12" *ngFor="let skill of hardskills">
-      <div class="skill">
-        <circle-progress
-          [title]="skill.name"
-          [titleColor]="'rgba(239, 207, 227)'"
-          [titleFontSize]="'20'"
-          [titleFontWeight]="'700'"
-          [units]="''"
-          [percent]="skill.percent"
-          [subtitle]="skill.percent + '%'"
-          [subtitleColor]="'rgba(226, 115, 150)'"
-          [subtitleFontSize]="'15'"
-          [subtitleFontWeight]="'700'"
-          [radius]="radius"
-          [space]="-10"
-          [outerStrokeGradient]="true"
-          [outerStrokeGradientStopColor]="'rgba(181, 23, 158, 1)'"
-          [outerStrokeWidth]="10"
-          [innerStrokeWidth]="10"
-          [outerStrokeColor]="'rgba(247, 37, 133, 1)'"
-          [innerStrokeColor]="'#e7e8ea'"
-          [animation]="true"
-          [animateTitle]="false"
-          [animationDuration]="1000"
-          [showBackground]="false"
-          [clockwise]="false"
-          [startFromZero]="false"
-          [lazy]="true"
-        ></circle-progress>
-        <button class="btn btn-light" [routerLink]="'/editskill/' + skill.id">
+      <circle-progress
+        [title]="skill.nombre"
+        [titleColor]="'rgba(239, 207, 227)'"
+        [titleFontSize]="'20'"
+        [titleFontWeight]="'700'"
+        [units]="''"
+        [percent]="skill.porcentaje"
+        [subtitle]="skill.porcentaje + '%'"
+        [subtitleColor]="'rgba(226, 115, 150)'"
+        [subtitleFontSize]="'15'"
+        [subtitleFontWeight]="'700'"
+        [radius]="80"
+        [space]="-10"
+        [outerStrokeGradient]="true"
+        [outerStrokeGradientStopColor]="'rgba(181, 23, 158, 1)'"
+        [outerStrokeWidth]="10"
+        [innerStrokeWidth]="10"
+        [outerStrokeColor]="'rgba(247, 37, 133, 1)'"
+        [innerStrokeColor]="'#e7e8ea'"
+        [animation]="true"
+        [animateTitle]="false"
+        [animationDuration]="1000"
+        [showBackground]="false"
+        [clockwise]="false"
+        [startFromZero]="false"
+        [lazy]="true"
+      ></circle-progress>
+      <div class="text-center d-flex justify-content-center">
+        <button class="btn btn-light mr-2" routerLink="/editskill/{{ skill.id }}">
           <i class="bi bi-pencil-fill" ngbTooltip="Editar Skill"></i>
         </button>
-        <button class="btn btn-danger" (click)="deleteSkill(skill.id)">
-          <i class="bi bi-trash-fill"></i>
+        <button class="btn btn-light" (click)="delete(skill.id)">
+          <i class="bi bi-trash-fill" ngbTooltip="Eliminar Skill"></i>
         </button>
       </div>
     </div>
   </div>
-  <h3>Soft Skills</h3>
-  <button type="button" class="btn btn-primary btn-icon" routerLink="/newskill" *ngIf="isLogged">
-    <i class="bi bi-plus" ngbTooltip="Nueva Skill"></i>
-  </button>
-  <div class="row">
-    <div class="text-center col-lg-4 col-md-6 col-sm-12 col-12" *ngFor="let skill of softSkills">
-      <div class="skill">
-        <circle-progress
-          [title]="skill.name"
-          [titleColor]="'rgba(179, 222, 226)'"
-          [titleFontSize]="skill.wordSize ? skill.wordSize.toString() : '17'"
-          [titleFontWeight]="'700'"
-          [units]="''"
-          [percent]="skill.percent"
-          [subtitle]="skill.percent + '%'"
-          [subtitleColor]="'rgba(222, 226, 255)'"
-          [subtitleFontSize]="'15'"
-          [subtitleFontWeight]="'700'"
-          [radius]="radius"
-          [space]="-10"
-          [outerStrokeGradient]="true"
-          [outerStrokeGradientStopColor]="'rgba(76, 201, 240,0.5)'"
-          [outerStrokeWidth]="10"
-          [innerStrokeWidth]="10"
-          [outerStrokeColor]="'rgba(58, 12, 163, 1)'"
-          [innerStrokeColor]="'#e7e8ea'"
-          [animation]="true"
-          [animateTitle]="false"
-          [animationDuration]="1000"
-          [showBackground]="false"
-          [clockwise]="false"
-          [startFromZero]="false"
-          [lazy]="true"
-        ></circle-progress>
-        <button class="btn btn-light" [routerLink]="'/editskill/' + skill.id">
-          <i class="bi bi-pencil-fill" ngbTooltip="Editar Skill"></i>
-        </button>
-        <button class="btn btn-danger" (click)="deleteSkill(skill.id)">
-          <i class="bi bi-trash-fill"></i>
-        </button>
-      </div>
-    </div>
-  </div>-->
-
-
-
-
-<!--<div class="container-fluid" id="skills">
-    <h3>Hard Skills</h3>
-    <button type="button" class="btn btn-primary btn-icon float-lg-end" routerLink="/newskill/" *ngIf="isLogged">
-    <i class="bi bi-plus" ngbTooltip="Nueva Skill"></i>
-    </button>
-    <div class="row">
-        <div class="col-lg-4 col-md-6 col-sm-12 col-12" *ngFor="let skill of hardskills">
-            <div class="skill">
-                <circle-progress [title]="skill.name" [titleColor]="'rgba(239, 207, 227)'" [titleFontSize]="'20'" [titleFontWeight]="'700'" [units]="''" [percent]="skill.percent" [subtitle]="skill.percent + '%'" [subtitleColor]="'rgba(226, 115, 150)'" [subtitleFontSize]="'15'" [subtitleFontWeight]="'700'" [radius]="radius" [space]="-10" [outerStrokeGradient]=" true " [outerStrokeGradientStopColor]="'rgba(181, 23, 158, 1)'" [outerStrokeWidth]=" 10 " [innerStrokeWidth]=" 10 " [outerStrokeColor]=" 'rgba(247, 37, 133, 1)' " [innerStrokeColor]=" '#e7e8ea' " [animation]="true" [animateTitle]=" false " [animationDuration]=" 1000 " [showBackground]=" false " [clockwise]=" false " [startFromZero]=" false " [lazy]=" true "></circle-progress>
-                <button class="btn btn-light" routerLink="/newskill/"{{skill.id}}">
-                    <i class="bi bi-pencil-fill"></i>
-                </button>
-                <button class="btn btn-light" routerLink="/newskill/{{skill.id}}">
-                  <i class="bi bi-pencil-fill" ngbTooltip="Editar Experiencia"></i>
-                </button>
-            </td>
-            <td *ngIf="isLogged">
-                <button class="btn btn-danger" (click)="delete(skill.id)">
-                    <i class="bi bi-trash-fill"></i>
-                </button>
-            </td>
-        </div>
-    </div>
 </div>
 
-<h3>Soft Skills</h3>
-<button type="button" class="btn btn-primary btn-icon" routerLink="/newskill" *ngIf="isLogged">Nueva Skill</button>
-  <i class="bi bi-plus"></i>
-</button>
-<button type="button" routerLink="/newskill" class="btn btn-dark" *ngIf="isLogged">Nueva Skill</button>
-<div class="row">
-    <div class="text-center col-lg-4 col-md-6 col-sm-12 col-12" *ngFor="let softSkill of softSkills">
-        <div class="skill">
-            <circle-progress [title]="softSkill.name" [titleColor]="'rgba(179, 222, 226)'" [titleFontSize]="softSkill.wordSize ? softSkill.wordSize.toString() : '17'" [titleFontWeight]="'700'" [units]="''" [percent]="softSkill.percent" [subtitle]="softSkill.percent + '%'" [subtitleColor]="'rgba(222, 226, 255)'" [subtitleFontSize]="'15'" [subtitleFontWeight]="'700'" [radius]="radius" [space]="-10" [outerStrokeGradient]=" true " [outerStrokeGradientStopColor]="' rgba(76, 201, 240,0.5) '" [outerStrokeWidth]=" 10 " [innerStrokeWidth]=" 10 " [outerStrokeColor]="' rgba(58, 12, 163, 1) '" [innerStrokeColor]=" '#e7e8ea' " [animation]="true" [animateTitle]=" false " [animationDuration]=" 1000 " [showBackground]=" false " [clockwise]=" false " [startFromZero]=" false " [lazy]=" true "></circle-progress>
-        </div>
-        <button class="btn btn-light" routerlink="/editskill/{{softSkill.id}}">
-          <i class="bi bi-pencil-fill" ngbTooltip="Editar Skill"></i>
-        </button>
-    </td>
-    <td *ngIf="isLogged">
-        <button class="btn btn-danger" (click)="delete(softSkill.id)">
-            <i class="bi bi-trash-fill"></i>
-        </button>
-    </td>
-</div></div></div> <div class="contenedor-skills" id="skills">
-      <h3>HABILIDADES</h3>
-      <div class="skill" *ngFor="let skill of skills">
-        <div class="info">
-          <p><span class="lista"></span>{{ skill.name }}</p>
-          <span class="porcentaje">{{ skill.percent }}%</span>
-        </div>
-        <div class="barra">
-          <div class="progreso" [id]="skill.id"></div>
-        </div>
-      </div>
-    </div>--><!--<div class="container">
-        <h2>Mis habilidades</h2>
-        <div class="row">
-          <div class="col-md-4" *ngFor="let skill of skills">
-            <div class="card mb-4">
-              <img src="https://via.placeholder.com/150" class="card-img-top" [alt]="skill.name">
-              <div class="card-body" [ngStyle]="{'background-color': skill.color}">
-                <h5 class="card-title">{{skill.name}}</h5>
-                <ngx-charts-pie-chart
-                  [view]="dimension"
-                  [results]="[{name: 'Dominio', value: skill.value}, {name: 'No dominio', value: 100 - skill.value}]"
-                  [scheme]="colorScheme"
-                  [legend]="showLegend"
-                  [labels]="showLabels">
-                </ngx-charts-pie-chart>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    
-    <div class="contenedor-skills" id="skills">
-      <h3>HABILIDADES </h3>
-      <div class="skill">
-          <div class="info">
-              <p> <span class="lista"> </span>Html & Css</p>
-              <span class="porcentaje">95%</span>
-          </div>
-    
-          <div class="barra">
-              <div class="" id="html"></div>
-          </div>
-      </div>
-      <div class="skill">
-          <div class="info">
-              <p> <span class="lista"> </span>Javascript</p>
-              <span class="porcentaje">90%</span>
-          </div>
-    
-          <div class="barra">
-              <div class="" id="js"></div>
-          </div>
-      </div>
-      <div class="skill">
-          <div class="info">
-              <p> <span class="lista"> </span>Bases de Datos</p>
-              <span class="porcentaje">90%</span>
-          </div>
-    
-          <div class="barra">
-              <div class="" id="bd"></div>
-          </div>
-      </div>
-      <div class="skill">
-          <div class="info">
-              <p> <span class="lista"> </span>Photoshop</p>
-              <span class="porcentaje">85%</span>
-          </div>
-    
-          <div class="barra">
-              <div class="" id="ps"></div>
-          </div>
-      </div>
-    </div> --><!--<div class="contenedor-skills" id="skills">
-      <h3>HABILIDADES </h3>
-      <ngx-charts-bar-vertical
-        [results]="skills"
-        [xAxis]="true"
-        [yAxis]="false"
-        [legend]="false"
-        [gradient]="false"
-        [showXAxisLabel]="false"
-        [showYAxisLabel]="false"
-        [xAxisLabel]="false"
-        [yAxisLabel]="false"
-        [colorScheme]="{domain: skills.map(skill => skill.color)}"
-      >
-      </ngx-charts-bar-vertical>
-    </div>-->
+
