--- a/my-app/src/app/shared/components/header/header.component.html
+++ b/my-app/src/app/shared/components/header/header.component.html
@@ -4,8 +4,8 @@
             <img src="../../../assets/images/header/Icono.ArgentinaPrograma.png" class="d-inline-block align-top" alt="Argentina Programa">
           </a>
             <div class="redes justify-content-end"><!--<div class="redes justify-content-end">: crea un contenedor para los íconos de las redes sociales y los alinea a la derecha.-->
-              <a href="#" aria-label="Linkedin" target="_blank"><i class="bi bi-linkedin"></i></a><!-- <a href="#" aria-label="Linkedin"><i class="bi bi-linkedin"></i></a>: crea un enlace a una página interna y agrega un ícono de LinkedIn. El atributo "aria-label" proporciona una etiqueta para la accesibilidad.-->
-              <a href="#" aria-label="GitHub" target="_blank"><i class="bi bi-github"></i></a>
+              <a href="https://www.linkedin.com/" aria-label="Linkedin" target="_blank"><i class="bi bi-linkedin"></i></a><!-- <a href="#" aria-label="Linkedin"><i class="bi bi-linkedin"></i></a>: crea un enlace a una página interna y agrega un ícono de LinkedIn. El atributo "aria-label" proporciona una etiqueta para la accesibilidad.-->
+              <a href="https://github.com/AleSVillegas" aria-label="GitHub" target="_blank"><i class="bi bi-github"></i></a>
               <button type="submit" target="_blank" class="btn btn-outline-light" (click)="login()" *ngIf="!isLogged"> Login </button>
               <button type="submit" target="_blank" class="btn btn-outline-light" (click)="onLogOut()" *ngIf="isLogged"> Cerrar Sesión </button>
             </div>
